# aether

./: .gitignore  Cargo.toml  aether.toml.example  build.sh
docs/: 001-图片处理程序架构.md  002-命令行设计.md  003-数据格式.md  004-项目初始化实施过程.md  005-技术架构调整.md  006-元数据提取.md  007-构建优化.md  008-略缩图和blurhash优化.md  review.md  review2.md  review3.md  review4.md
src/: build.rs  cli.rs  config.rs  main.rs
