[package]
name = "aether"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
blurhash = "0.2"
clap = { version = "4.5", features = ["derive"] }
fast_image_resize = { version = "6.0", features = ["image"] }
image = "0.25"
indicatif = "0.17"
libheif-rs = { version = "2.7.0", features = ["image"] }
num_cpus = "1.17"
rayon = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["formatting"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
walkdir = "2.5"
webp = "0.3"
